<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".guardarLibroFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#4D0082"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="20dp"
        >

        <TextView
            android:id="@+id/lblTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/titulo"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtTitulo"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="serif"
            android:hint="@string/placeHolderTitulo"
            android:inputType="text"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff" />

        <TextView
            android:id="@+id/lblAutor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/autor"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtAutor"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:ems="10"
            android:fontFamily="serif"
            android:hint="@string/placeHolderAutor"
            android:inputType="text"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff" />

        <TextView
            android:id="@+id/lblISBN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/isbn"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtISBN"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:ems="10"
            android:fontFamily="serif"
            android:hint="@string/placeHolderIsbn"
            android:inputType="text"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff" />

        <TextView
            android:id="@+id/lblGenero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/genero"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtGenero"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:ems="10"
            android:fontFamily="serif"
            android:hint="@string/placeHolderGenero"
            android:inputType="text"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff" />

        <TextView
            android:id="@+id/lblDisponibles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/numero_ejemplares_disponibles"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtDisponibles"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:ems="10"
            android:fontFamily="serif"
            android:hint="@string/placeHolderDisponible"
            android:inputType="text"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff" />

        <TextView
            android:id="@+id/lblOcupados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/numero_ejemplares_ocupados"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtOcupados"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:ems="10"
            android:fontFamily="serif"
            android:hint="@string/placeHolderOcupado"
            android:inputType="text"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Guardar" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Button" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>